# accord-beaker

./: .gitignore  AGENTS.md  README.md  mam2024_tercile_forecast.nc  pyproject.toml
.github/workflows/: publish.yml  skill-health.yml  test.yml
src/accord_beaker/: __init__.py
src/accord_beaker/accord_context/: __init__.py  agent.py  context.py  skills.json
src/accord_beaker/accord_context/procedures/python3/: environment.py  setup.py
tests/: __init__.py  conftest.py  test_context.py  test_skills.py
